# gba

./: .clang-format  .gitignore  CMakeLists.txt  README.md
cli/: CMakeLists.txt  main.cxx
cli/include/: display.h
cli/src/: display.cxx
core/: CMakeLists.txt
core/include/: alu.h  bus.h  cartridge.h  cpu.h  decoder.h  emulator.h  lsu.h  ppu.h  thumb_alu.h  thumb_decoder.h  thumb_lsu.h
core/src/: alu.cxx  bus.cxx  cartridge.cxx  cpu.cxx  decoder.cxx  emulator.cxx  lsu.cxx  ppu.cxx  thumb_alu.cxx  thumb_decoder.cxx  thumb_lsu.cxx
scripts/: build.py  make_gba.py
tests/: CMakeLists.txt  test_block_transfer.cxx  test_branch.cxx  test_bus.cxx  test_bx.cxx  test_cartridge.cxx  test_conditions.cxx  test_cpu.cxx  test_halfword.cxx  test_io_dispcnt.cxx  test_loop.cxx  test_lsu.cxx  test_main.cxx  test_ppu.cxx  test_shifts.cxx  test_thumb_alu.cxx  test_thumb_bl.cxx  test_thumb_branch.cxx  test_thumb_bx.cxx  test_thumb_decode.cxx  test_thumb_lsu.cxx  test_thumb_stack.cxx  test_vram.cxx
